# proc_ura

./: .gitignore  CMakeLists.txt  package.xml
config/: URA.gv  ura_config.urdf
launch/: joint_state_aggregator.launch  proc_ura.launch  proc_ura_bringup_moveit.launch  proc_ura_controller.launch  proc_ura_gazebo.launch  proc_ura_gazebo_states.launch  proc_ura_gazebo_world.launch  proc_ura_rviz.launch  proc_ura_trajectory_controller.launch
meshes/: Fix.STL  Gear.STL  J1.STL  J2.STL  J3.STL  J4.STL  base.STL  clamp.STL
src/proc_ura/: main.cc  proc_ura_node.cc  proc_ura_node.h
src/ura_config/: .setup_assistant  package.xml
src/ura_config/config/: URA.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml
src/ura_config/launch/: move_group.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
urdf/: URA.urdf  ura_config.urdf
yaml/: dynamixel_ports.yaml  proc_ura_joint_states.yaml  proc_ura_trajectory_controller.yaml  trajectory_control.yaml  ura.yaml
