<?xml version="1.0"?>
<package>
  <name>proc_ura</name>
  <version>0.0.0</version>
  <description>The proc_ura package</description>

  <maintainer email="francis.masse05@gmail.com">Francis Masse</maintainer>


  <license>GNU GENERAL PUBLIC LICENSE</license>

  <url type="website">https://github.com/sonia-auv/proc_ura</url>

  <author email="francis.masse05@gmail.com">Francis Masse</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
